--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hilton</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -31,7 +31,7 @@
                 <a href="tel:+13129224400">1-312-922-4400</a>
             </address>
         </section>
-        
+
         <nav>
             <ul>
                 <li><a href="/">Map</a></li>
