--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
             </ul>
         </nav>
     </main>
+    <!--    //TODO
     <footer>
 
-    </footer>
+    </footer> -->
 </body>
 
 </html>
